# Spirmark

./: .gitignore  .gitmodules  CMakeLists.txt  License.txt  Readme.md  Spirmark.Cpp.user.props.in  Spirmark.sh  imgui_default.ini
Assets/: LiquidMetal.frag  fullscreen.vert  license.txt  model.vert  similarity.frag
Results/: example_results.xlsx
Shaders/: AlienBuilding.frag  Clouds.frag  Explorer.frag  Hologram.frag  MandelbrotPatternDecoration.frag  Sea.frag  Spaceship.frag  Strings.frag  default.spirmark
Similarity/: example_similarity.xlsx
Spirmark/: SpirmarkApp.cpp  SpirmarkApp.h  SpirmarkCore.cpp  SpirmarkCore.h  SpirmarkUI.cpp  SpirmarkUI.h  main.cpp  resource.h  resource.rc
Spirmark/Helpers/: Bencher.cpp  Bencher.h  BenchmarkMode.cpp  BenchmarkMode.h  BenchmarkedShader.cpp  BenchmarkedShader.h  BenchmarkedShaderResult.h  Errors.cpp  Errors.h  IO.cpp  IO.h  Mesh_OGL3.cpp  Mesh_OGL3.h  ObjParser_OGL3.cpp  ObjParser_OGL3.h  ProgramObject.cpp  ProgramObject.h  ShaderObject.cpp  ShaderObject.h  ShaderProgramType.h  ShaderToySource.h  StructuralSimilarity.cpp  StructuralSimilarity.h  UIWidgets.cpp  UIWidgets.h  UniformValues.h
dependencies/: readme.md
